--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="./css/bootstrap.min.css" rel="stylesheet">
  
     <!-- style.css -->
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
  
     <!-- Optional JavaScript -->
     <script src="./js/jquery-3.4.1.slim.min.js"></script>
