--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             // この記述を追記
             if ('serviceWorker' in navigator) {
             navigator.serviceWorker
-                     .register('/service-worker.js') // ここはservice-worker.jsのパスを指定
+                     .register('/paytemp/service-worker.js') // ここはservice-worker.jsのパスを指定
                      .then(function() { console.log('Service Worker Registered'); });
             }
             // この記述を追記　ここまで
