--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
             if ('serviceWorker' in navigator) {
             navigator.serviceWorker
                      .register('./service-worker.js') // ここはservice-worker.jsのパスを指定
-                     .then(function() { console.log('Service Worker Registered'); });
+                     .then(registration => {
+                        // 登録成功
+                        registration.onupdatefound = function() {
+                            console.log('アップデートがあります！');
+                            registration.update();
+                        }
+                    });
             }
             // この記述を追記　ここまで
         </script>
