--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     </style>
 
     <script>
-            // この記述を追記
-            if ('serviceWorker' in navigator) {
+        // この記述を追記
+        if ('serviceWorker' in navigator) {
             navigator.serviceWorker
-                     .register('./service-worker.js') // ここはservice-worker.jsのパスを指定
-                     .then(registration => {
-                        // 登録成功
-                        registration.onupdatefound = function() {
-                            console.log('アップデートがあります！');
-                            registration.update();
-                        }
-                    });
-            }
-            // この記述を追記　ここまで
+                .register('./service-worker.js') // ここはservice-worker.jsのパスを指定
+                .then(registration => {
+                    // 登録成功
+                    registration.onupdatefound = () => {
+                        console.log('アップデートがあります！');
+                        registration.update();
+                    }
+                });
+        }
+        // この記述を追記　ここまで
         </script>
     <link rel="manifest" href="manifest.json">
 </head>
