--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </ul>
         <div class="btn-group" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-secondary" onclick="checkAllIsPayed()">Done All</button>
-            <button type="button" class="btn btn-secondary" onclick="switchAppearPayed()">Only Still</button>
+            <button type="button" class="btn btn-secondary" onclick="switchAppearPayed()">Show All</button>
             <button type="button" class="btn btn-secondary" onclick="deleteAllPayed()">Delete All</button>
         </div>
     </div>
